--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assests/img/favicon.ico">
+    <link rel="icon" href="/assets/img/favicon.ico">
 
-    <title>dddddddddDustin Bootstrap to WordPress</title>
+    <title>Dustin Bootstrap to WordPress</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!-- FontAwesome Icons -->
-    <link href="assets/css/font-awesome/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -41,7 +41,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" datatoggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle Navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -63,7 +63,7 @@
 </header>
 
 <!-- HERO -->
-<section id="hero">
+<section id="hero" data-type="background" data-speed="5">
     <article></article>
     <div class="container clearfix">
         <div class="row">
@@ -98,13 +98,43 @@
 </section><!-- hero -->
 
 <!--  OPT IN SECTION -->
-<section>
+<section id="optin">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank you.</p>
+            </div>
 
-</section>
+            <div class="col-sm-4">
+                <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">Click here to subscribe</button>
+            </div>
+        </div>
+    </div>
+
+
+</section><!-- optin -->
 
 <!-- BOOST YOUR INCOME -->
-<section>
-
+<section id="boost-income">
+    <div class="container">
+        <div class="section-header">
+            <img src="assets/img/icon-boost.png" alt="Chart"/>
+            <h2>How You Can Boost Your Income</h2>
+        </div>
+        <p class="lead">
+            Whether you&rsquo;re a freelance designer, entrepreneur, employee for a company, code hobbyist, or looking for a new career &mdash; this course gives you an immensely valuable skill that will enable you to either:
+        </p>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Make money on the side</h3>
+                <p>So you can save up for that Hawaiian vacation you’ve been wanting, help pay off your debt, your car, your mortgage, or simply just to have bonus cash laying around.</p>
+            </div>
+            <div class="col-sm-6">
+                <h3>Create a full-time income</h3>
+                <p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- WHO BENEFITS -->
@@ -148,17 +178,45 @@
 </footer>
 
 <!-- MODAL -->
-<div class="">
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="close" type="button" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"></i> Subscribe to our Mailing List</h4>
+            </div>
+            <div class="modal-body">
+                <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our best-selling courses, <em>for free!</em></p>
 
+                <form class="form-inline" role="form">
+                    <div class="form-group">
+                        <label for="subscribe-name" class="sr-only">Your first name</label>
+                        <input type="text" class="form-control" id="subscribe-name" placeholder="Your first name"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="subscribe-email" class="sr-only">Your first name</label>
+                        <input type="text" class="form-control" id="subscribe-email" placeholder="and your email"/>
+                    </div>
+
+                    <input type="submit" class="btn btn-danger"/>
+
+                    <hr/>
+
+                    <p><small>By providing your email you consent to receiving occasional promotional emails &amp; newsletters.
+                        <br/> No Spam. Just good stuff.  We respect your privacy &amp; you may un-subscribe at any time.</small></p>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- BOOTSTRAP CORE JAVASCRIPT
-      Placed at the end of the doucment so the pages load faster!
+      Placed at the end of the document so the pages load faster!
   -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/jquery-2.1.4.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/main.js"></script>
-<script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 
 <!-- TypeKit Fonts  -->
 <script src="//use.typekit.net/all3iuk.js"></script>
