--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt="Bootstrap to WordPress" /></a>
+                    <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt="Bootstrap to WordPress"/></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -55,11 +55,16 @@
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                    </ul><!-- nav -->
-                </div><!-- navbar-collapse -->
-            </div><!-- container -->
-        </div><!--navbar -->
-    </div><!-- navbar-wrapper -->
+                    </ul>
+                    <!-- nav -->
+                </div>
+                <!-- navbar-collapse -->
+            </div>
+            <!-- container -->
+        </div>
+        <!--navbar -->
+    </div>
+    <!-- navbar-wrapper -->
 </header>
 
 <!-- HERO -->
@@ -72,19 +77,27 @@
             </div>
             <div class="col-sm-7 hero-text">
                 <h1>Bootstrap to WordPress</h1>
-                <p class="lead">Earn An Extra $1k - $5k a MOnth by Learnign to Cde Yoru Very Own Resonsive &amp; Custom WordPress Websites with Bootstrap </p>
+
+                <p class="lead">Earn An Extra $1k - $5k a MOnth by Learnign to Cde Yoru Very Own Resonsive &amp; Custom
+                    WordPress Websites with Bootstrap </p>
 
                 <div id="price-timeline">
                     <div class="price active">
-                        <h4>Pre-Launch Price <small>Ends soon!</small></h4>
+                        <h4>Pre-Launch Price
+                            <small>Ends soon!</small>
+                        </h4>
                         <span>$149</span>
                     </div>
                     <div class="price">
-                        <h4>Launch Price <small>Coming soon!</small></h4>
+                        <h4>Launch Price
+                            <small>Coming soon!</small>
+                        </h4>
                         <span>$299</span>
                     </div>
                     <div class="price">
-                        <h4>Final Price <small>Coming soon!</small></h4>
+                        <h4>Final Price
+                            <small>Coming soon!</small>
+                        </h4>
                         <span>$399</span>
                     </div>
                 </div>
@@ -93,68 +106,212 @@
                 </p>
 
             </div>
-        </div><!--row-->
-    </div><!-- container -->
-</section><!-- hero -->
+        </div>
+        <!--row-->
+    </div>
+    <!-- container -->
+</section>
+<!-- hero -->
 
 <!--  OPT IN SECTION -->
 <section id="optin">
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank you.</p>
+                <p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank
+                    you.</p>
             </div>
 
             <div class="col-sm-4">
-                <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">Click here to subscribe</button>
+                <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">Click here
+                    to subscribe
+                </button>
             </div>
         </div>
     </div>
 
 
-</section><!-- optin -->
+</section>
+<!-- optin -->
 
 <!-- BOOST YOUR INCOME -->
 <section id="boost-income">
     <div class="container">
         <div class="section-header">
             <img src="assets/img/icon-boost.png" alt="Chart"/>
+
             <h2>How You Can Boost Your Income</h2>
         </div>
         <p class="lead">
-            Whether you&rsquo;re a freelance designer, entrepreneur, employee for a company, code hobbyist, or looking for a new career &mdash; this course gives you an immensely valuable skill that will enable you to either:
+            Whether you&rsquo;re a freelance designer, entrepreneur, employee for a company, code hobbyist, or looking
+            for a new career &mdash; this course gives you an immensely valuable skill that will enable you to either:
         </p>
+
         <div class="row">
             <div class="col-sm-6">
                 <h3>Make money on the side</h3>
-                <p>So you can save up for that Hawaiian vacation you’ve been wanting, help pay off your debt, your car, your mortgage, or simply just to have bonus cash laying around.</p>
+
+                <p>So you can save up for that Hawaiian vacation you’ve been wanting, help pay off your debt, your car,
+                    your mortgage, or simply just to have bonus cash laying around.</p>
             </div>
             <div class="col-sm-6">
                 <h3>Create a full-time income</h3>
-                <p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
+
+                <p>WordPress developers have options. Many developers make a generous living off of creating custom
+                    WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers
+                    can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
             </div>
         </div>
     </div>
 </section>
 
 <!-- WHO BENEFITS -->
-<section>
+<section id="who-benefits">
+    <div class="container">
+        <div class="section-header">
+            <img src="assets/img/icon-pad.png" alt="Pad and pencil"/>
 
+            <h2>Who Should Take This Course?</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3>Graphic &amp; Web Designers</h3>
+
+                <p>Graphic designers are extremely talented, but ask them to code their designs and they’ll freeze up!
+                    This leaves them with no other choice but to hire a web developer. Any professional graphic
+                    designers knows web developers can be expensive.
+                </p>
+
+                <p> If you’re a designer, learning to code your own WordPress websites can change your business
+                    entirely! Now, not only are you a great designer, but you’re a skillful developer, too! This puts
+                    you in a position to make an extra $1,000 – $5,000 per project.
+                </p>
+
+                <h3>Entrepreneurs</h3>
+
+                <p>Entrepreneurs have big dreams, and in many cases, shoestring budgets. In order to survive in the
+                    cut-throat world of the Startup company, it’s a necessity to have a world-class website. However,
+                    world-class websites come with a large price tag.
+                </p>
+
+                <p> If you can learn how to build a high-quality startup website by yourself, then you’ve just saved
+                    yourself a lot of cash, tens of thousands of dollars in many cases.
+                </p>
+
+                <h3>Employees</h3>
+
+                <p>Any company knows the education & training of their employees is key to a thriving team.
+                </p>
+
+                <p>Depending on the type of company you work for, if you understand how to code, and can develop CMS
+                    driven websites, that gives you negotiating power for a better position, or a higher salary.</p>
+
+                <h3>Code Hobbyists</h3>
+
+                <p>It’s fun to learn challenging new skills. Code hobbyists can add dynamic websites to their arsenal of
+                    tools to play with — you can even sell WordPress themes and plugins for cash! The possibilities are
+                    truly endless.</p>
+
+                <h3>People Looking for a New Career</h3>
+
+                <p>Are you out of work? Looking for a more rewarding job? Desire a career that can allow you to work
+                    almost anywhere in the world? Becoming a Web Developer might be the answer for you. </p>
+
+                <p>Web developers are paid well, anywhere from $33,000 to more than $105,000 per year. They get to work
+                    at amazing companies that are changing the world, or they enjoy the ability to start their own
+                    companies, become location-independent and work from home, from coffee shops, in an airplane, on the
+                    beach, or wherever they want!</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- COURSE FEATURES -->
-<section>
+<section id="course-features">
+    <div class="container">
+        <div class="section-header">
+            <img src="assets/img/icon-rocket.png" alt="Rocket"/>
 
+            <h2>Course Features</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-2">
+                <i class="ci ci-computer"></i>
+                <h4>Lifetime access to 80+ lectures</h4>
+            </div>
+            <div class="col-sm-2">
+                <i class="ci ci-watch"></i>
+                <h4>10+ hours of HD video content</h4>
+            </div>
+            <div class="col-sm-2">
+                <i class="ci ci-calendar"></i>
+                <h4>30-day money back guarantee</h4>
+            </div>
+            <div class="col-sm-2">
+                <i class="ci ci-community"></i>
+                <h4>Access to a community of like-minded students</h4>
+            </div>
+            <div class="col-sm-2">
+                <i class="ci ci-instructor"></i>
+                <h4>Direct access to the instructor</h4>
+            </div>
+            <div class="col-sm-2">
+                <i class="ci ci-device"></i>
+                <h4>Accessible content on your mobile devices</h4>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- PROJECT FEATURES -->
-<section>
+<section id="project-features">
+    <div class="container">
+        <h2>Final Project Features</h2>
 
+        <p class="lead">Throughout this entire course, you work towards building an incredibly beautiful website. Want
+            to see the website you are going to build? You're looking at it! The website you're using right now is the
+            website you will have built entirely by yourself, by the end of this course.</p>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="assets/img/icon-design.png" alt="Design"/>
+
+                <h3>Sexy &amp; Modern Design</h3>
+
+                <p>You get to work with a modern, professional quality design &amp; layout.</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="assets/img/icon-code.png" alt="Code"/>
+
+                <h3>Quality HTML5 &amp; CSS3</h3>
+
+                <p>You'll learn how to hand-craft a stunning website with valid, semantic and beautiful HTML5 &amp;
+                    CSS3.</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="assets/img/icon-design.png" alt="Design"/>
+
+                <h3>Easy-to-us CMS</h3>
+
+                <p>Allow your clients to easily update their websites by converting your static websites to dynamic
+                    websites, using WordPress.</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- VIDEO FEATURETTE -->
-<section>
-
+<section id="featurette">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h2>Watch the Course Introduction</h2>
+                <iframe width="100%" height="415" src="https://www.youtube.com/embed/q-mJJsnOHew" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- INSTRUCTOR -->
@@ -182,11 +339,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button class="close" type="button" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"></i> Subscribe to our Mailing List</h4>
+                <button class="close" type="button" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"></i> Subscribe to our Mailing List
+                </h4>
             </div>
             <div class="modal-body">
-                <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our best-selling courses, <em>for free!</em></p>
+                <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our
+                    best-selling courses, <em>for free!</em></p>
 
                 <form class="form-inline" role="form">
                     <div class="form-group">
@@ -202,8 +362,13 @@
 
                     <hr/>
 
-                    <p><small>By providing your email you consent to receiving occasional promotional emails &amp; newsletters.
-                        <br/> No Spam. Just good stuff.  We respect your privacy &amp; you may un-subscribe at any time.</small></p>
+                    <p>
+                        <small>By providing your email you consent to receiving occasional promotional emails &amp;
+                            newsletters.
+                            <br/> No Spam. Just good stuff. We respect your privacy &amp; you may un-subscribe at any
+                            time.
+                        </small>
+                    </p>
                 </form>
             </div>
         </div>
@@ -223,7 +388,8 @@
 <script>
     try {
         Typekit.load();
-    } catch (e) {}
+    } catch (e) {
+    }
 </script>
 </body>
 
