Up to Testimonials.

--- a/index.html
+++ b/index.html
@@ -308,25 +308,183 @@
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2>Watch the Course Introduction</h2>
-                <iframe width="100%" height="415" src="https://www.youtube.com/embed/q-mJJsnOHew" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="415" src="https://www.youtube.com/embed/q-mJJsnOHew" frameborder="0"
+                        allowfullscreen></iframe>
             </div>
         </div>
     </div>
 </section>
 
 <!-- INSTRUCTOR -->
-<section>
+<section id="instructor">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-6">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h2>Your Instructor
+                            <small>Dustin Reed</small>
+                        </h2>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="https://twitter.com/nitsuddeer" target="_blank" class="badge social twitter"><i
+                                class="fa fa-twitter"></i></a>
+                        <a href="https://facebook.com/DrDreed" target="_blank" class="badge social facebook"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://plus.google.com/+DustinReedM" target="_blank" class="badge social gplus "><i
+                                class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+                <p class="lead">
+                    A highly skilled professional, Dustin Reed is a passionate and experienced web designer, developer,
+                    blogger and digital entrepreneur.
+                </p>
+
+                <p>
+                    Hailing from North Of The Wall (Yellowknife, Canada), Brad made the trek to the Wet Coast
+                    (Vancouver, Canada) to educate and equip himself with the necessary skills to become a spearhead in
+                    his trade of solving problems on the web, crafting design solutions, and speaking in code.
+
+                </p>
+
+                <p> Brad's determination and love for what he does has landed him in some pretty interesting places with
+                    some neat people. He's had the privilege of working with, and providing solutions for, numerous
+                    businesses, big & small, across the Americas.
+                </p>
+
+                <p> Brad builds custom websites, and provides design
+                    solutions for a wide-array of clientele at his company, Brightside Studios. He regularly blogs about
+                    passive income, living your life to the fullest, and provides premium quality web design tutorials
+                    and courses for tens of thousands of amazing people desiring to master their craft.
+                </p>
+
+                <hr/>
+                <h3>The Numbers
+                    <small>They Don't Lie</small>
+                </h3>
+
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="num">
+                            <div class="num-content">
+                                41,000+ <span>students</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="num">
+                            <div class="num-content">
+                                568 <span>reviews</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="num">
+                            <div class="num-content">
+                                8 <span>courses</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
 
 <!-- TESTIMONIALS -->
-<section>
+<section id="kudos">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h2>What People Are Saying About Dustin</h2>
 
+                <!--    TESTIMONIAL -->
+                <div class="row testimonial">
+                    <div class="col-sm-4">
+                        <img src="assets/img/brennan.jpg" alt="Brennan"/>
+                    </div>
+                    <div class="col-sm-8">
+                        <blockquote>
+                            First Testimonial
+                        </blockquote>
+                        <cite>
+                            &mdash; Brennan, graduate of all of Brad's courses
+                        </cite>
+                    </div>
+                </div>
+
+                <!--    TESTIMONIAL -->
+                <div class="row testimonial">
+                    <div class="col-sm-4">
+                        <img src="assets/img/ben.png" alt="Ben"/>
+                    </div>
+                    <div class="col-sm-8">
+                        <blockquote>
+                            Bacon ipsum dolor amet tongue doner frankfurter ham cupim cow, sirloin shank flank spare
+                            ribs bacon rump. Sausage beef ribs chicken jerky frankfurter kielbasa ham ball tip short
+                            loin pancetta bacon fatback pig alcatra. Bacon porchetta ball tip chicken ham hock ham
+                            prosciutto ribeye shoulder salami cow pork belly rump shank short loin. Cupim pastrami jowl
+                            frankfurter leberkas beef ribs corned beef bresaola bacon.
+                        </blockquote>
+                        <cite>
+                            &mdash; Ben, graduate of all of Brad's courses
+                        </cite>
+                    </div>
+                </div>
+
+                <!--    TESTIMONIAL -->
+                <div class="row testimonial">
+                    <div class="col-sm-4">
+                        <img src="assets/img/aj.png" alt="AJ"/>
+                    </div>
+                    <div class="col-sm-8">
+                        <blockquote>
+                            Bacon ipsum dolor amet tongue doner frankfurter ham cupim cow, sirloin shank flank spare
+                            ribs bacon rump. Sausage beef ribs chicken jerky frankfurter kielbasa ham ball tip short
+                            loin pancetta bacon fatback pig alcatra. Bacon porchetta ball tip chicken ham hock ham
+                            prosciutto ribeye shoulder salami cow pork belly rump shank short loin. Cupim pastrami jowl
+                            frankfurter leberkas beef ribs corned beef bresaola bacon.
+                        </blockquote>
+                        <cite>
+                            &mdash; AJ, graduate of all of Brad's courses
+                        </cite>
+                    </div>
+                </div>
+
+                <!--    TESTIMONIAL -->
+                <div class="row testimonial">
+                    <div class="col-sm-4">
+                        <img src="assets/img/ernest.png" alt="Ernest"/>
+                    </div>
+                    <div class="col-sm-8">
+                        <blockquote>
+                            Bacon ipsum dolor amet tongue doner frankfurter ham cupim cow, sirloin shank flank spare
+                            ribs bacon rump. Sausage beef ribs chicken jerky frankfurter kielbasa ham ball tip short
+                            loin pancetta bacon fatback pig alcatra. Bacon porchetta ball tip chicken ham hock ham
+                            prosciutto ribeye shoulder salami cow pork belly rump shank short loin. Cupim pastrami jowl
+                            frankfurter leberkas beef ribs corned beef bresaola bacon.
+                        </blockquote>
+                        <cite>
+                            &mdash; Ernest, graduate of all of Brad's courses
+                        </cite>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- SIGN UP SECTION -->
-<section>
-
+<section id="signup" data-type="background" data-speed="4">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <h2>Are you ready to take your coding skills to the <strong>next level</strong>?</h2>
+                <p><a href="#" class="btn btn-lg btn-block btn-success">Yes, sign me up!</a></p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- FOOTER -->
